--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -5,3 +5,14 @@ body {
   font-family: "Varela Round", sans-serif;
   margin: 0;
 }
+
+.bg-image {
+  background-image: url("/Images/bg.jpg");
+  background-position: center center;
+  background-size: cover;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
