--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -16,3 +16,37 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.nav-container {
+  background-color: #ffb800;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100vw;
+  height: 50px;
+  z-index: 3;
+  border-radius: 0 0 10px 10px;
+}
+
+.nav-links-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  list-style: none;
+  margin: auto 40px;
+}
+
+.nav-link {
+  font-size: 16px;
+  color: #fbf5f3;
+  margin: auto 20px;
+}
+
+.nav-link a {
+  text-decoration: none;
+  color: #fbf5f3;
+  font-weight: 600;
+}
