--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -6,6 +6,32 @@ body {
   margin: 0;
 }
 
+input {
+  height: 30px !important;
+  border-radius: 10px;
+  padding: 2.5px 10px;
+  border: 0;
+  font-size: 12px;
+}
+
+select {
+  height: 30px !important;
+  border-radius: 10px;
+  padding: 2.5px 10px;
+  border: 0;
+  font-size: 12px;
+}
+
+select option {
+  background-color: #ffb800;
+  color: #fbf5f3;
+  border-radius: 2px;
+}
+select option:hover {
+  background-color: #fbf5f3 !important;
+  color: #ffb800 !important;
+}
+
 .bg-image {
   background-image: url("/Images/bg.jpg");
   background-position: center center;
